rework build files